--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </tr>
   </table>
   <hr>
-  <a href="hobbies.html"> My Hobbies</a>
+  <a href="Hobbies.html"> My Hobbies</a>
   <a href="Contact-me.html"> Contact-me</a>
   <br><br><br>
   <marquee>welcome</marquee>
